@@ -45,10 +45,5 @@
 	- Concurrent with v4, so that a domain can also have a v6 address
 	- Use in DNS, Apache
 
- - Plesk 9 support
-	- FS#5380
-	- CHANGELOG
-	- Functional tests
-
  - CMS made simple
 	- FS#5451
