@@ -1071,3 +1071,4 @@ Added a button to the Edit Account Plan page to create a new plan cloned from an
 Added a Module Config option for additional gzip command-line parameters, like --best or --rsyncable.
 Re-factored code for deleting tables created by installed scripts, and better handle the case where a script's database is missing.
 Converted libraries to use Webmin's new WebminCore module, where available. This leads to a signficant improvement in memory use and speed.
+Added support for migrating Plesk 9 backups, which have a different format to Plesk 7 and 8.
